# Noosphera_0.3

./: .dockerignore  .gitignore
agents/Thoth/: .coverage  .env  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agents/Thoth/src/domain/: __init__.py  common.py  correction  decision.py  ocr.py  state.py
agents/Thoth/src/thoth.egg-info/: PKG-INFO  SOURCES.txt
agents/Thoth/src/thoth/agent/: prompt.py  tool.py
agents/Thoth/src/thoth/config/: __init__.py  api.py  base.py  environment.py  glyphar.py  llm.py  memory.py  pipeline.py  thresholds.py
agents/Thoth/src/thoth/domain/: __init__.py  common.py  correction.py  decision.py  ocr.py  policy.py  state.py
agents/Thoth/src/thoth/infrastructure/: ledger.py  memory_manager.py
agents/Thoth/tests/: conftest.py  test_llmstudio_connection.py
tools/Glyphar/: README.md  pyproject.toml
tools/Glyphar/docs/capabilities/: layout.yaml  preprocessing.yaml
tools/Glyphar/docs/strategies/: fast_scan.yaml  high_accuracy.yaml  noisy_documents.yaml
tools/Glyphar/docs/tradeoffs/: memory.yaml  performance.yaml
tools/Glyphar/src/Glyphar.egg-info/: PKG-INFO
tools/Glyphar/src/glyphar/: .pylintrc
tools/Glyphar/src/glyphar.egg-info/: SOURCES.txt  top_level.txt
tools/Glyphar/src/glyphar/core/: identity.py  metadata.py  parallel_processor.py  stats.py
tools/Glyphar/src/glyphar/engines/: __init__.py  config_builder.py  optimizer.py  processor.py  stats.py  user_files.py
tools/Glyphar/src/glyphar/engines/core/: tesseract_core.py
tools/Glyphar/src/glyphar/file_io/: __init__.py  base.py
tools/Glyphar/src/glyphar/layout/: __init__.py  advanced_detector.py  column_detector.py
tools/Glyphar/src/glyphar/models/: column.py  config.py  output.py  quality.py  stats.py
tools/Glyphar/src/glyphar/optimization/: __init__.py  config_optimizer.py  image_preprocessor.py
tools/Glyphar/src/glyphar/preprocessing/: __init__.py  crop.py  deskew.py
tools/Glyphar/src/glyphar/preprocessing/threshold/: __init__.py  otsu.py
tools/Glyphar/tests/diagnostics/full_pipeline/: test_full_pipeline_diagnostic.py
tools/Glyphar/tests/integration/engines/: test_engine_pipeline_basic.py  test_engine_pipeline_full.py
tools/Glyphar/tests/integration/pre_processing/: test_polarity_real_pdfs.py  test_shadow_real_pdfs.py
tools/Glyphar/tests/integration/pre_processing/pipelines/: test_full_pipeline_real.py
tools/Glyphar/tests/output_data/engines/pipeline_basic/: PDF_B_Digital_p1.txt  PDF_B_Digital_p3.txt  PDF_B_Digital_p4.txt  PDF_B_Digital_p5.txt  PDF_B_Digital_p6.txt  PDF_C_Digitalizado_p2.txt  PDF_C_Digitalizado_p3.txt  PDF_C_Digitalizado_p4.txt  PDF_C_Digitalizado_p5.txt
tools/Glyphar/tests/output_data/engines/tesseract_core_full/: managed_batch_results.json  managed_smoke_PDF_A_Digital_page_002.json  managed_smoke_PDF_A_Digital_page_003.json  managed_smoke_PDF_B_Digital_page_001.json  managed_smoke_PDF_B_Digital_page_002.json  managed_smoke_PDF_B_Digital_page_006.json  managed_smoke_PDF_C_Digitalizado_page_001.json  (+1 more)
tools/Glyphar/tests/output_data/full_pipeline/: PDF_B_Digital.txt  PDF_C_Digitalizado.txt
tools/Glyphar/tests/unit/test_optimization/: test_config_optimizer.py  test_image_preprocessor.py
tools/Glyphar/tests/unit/test_preprocessing/: test_shadow_strategy.py
(+115 files in other folders)
